# halite

./: .gitignore  build.sh  fight.sh  halite  stats.go  stats.sh
golang/: build.sh  fight.sh  install.sh  stats.go  stats.sh
golang/jc03/: main.go
golang/jc04/: main.go
golang/jc05/: main.go
jc02/: main.go
jc04/: main.go
jc05/: main.go
kotlin/: fight.sh  java_fight.sh  jc01.kt  kotlin_fight.sh
ruby/: build.sh  fight.sh  jc03.rb  jc03_mk2.rb  jc03_mod.rb  jc03_mod2.rb  jc04_mk2.rb  jc06.rb  jc06_mk2.rb  jc06_mk3.rb  jc07.rb  networking.rb
rust/: Cargo.toml  fight.sh  rustfmt.toml
rust/src/: MyBot.rs  NoIdea.rs  RandomBot.rs
rust/src/hlt/: networking.rs  networking.rs.bk  types.rs
